# hydpy

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  apidoc.py  appveyor.yml  call_installer.py  combine_docversions.py  conda_environment.txt  disable_autodoc.py  draw_model_sketches.py  execute_exe.py  index.html  licenses_hydpy_installer.txt  make_and_install_dists.py  make_hydpy_installer.cfgt  modify_html.py  move_additional_docfiles.py  mypy.ini  noxfile.py  prepare_build.py  prepare_hydpy_installer.py  publish_docs.py  pylintrc  pyproject.toml  realease_info.md  relevant_branches.txt  requirements.txt  sequencetools.py  setup.py  sitecustomize.py  test_everything.py  update-gh-pages.sh
4.0/: .buildinfo  HydPy-A.html  HydPy-C.html  HydPy-D.html  HydPy-Dummy.html  HydPy-E.html  HydPy-H.html  HydPy-L.html  HydPy-T.html  HydPy-W.html  additional_repositories.html  aliastools.html  anntools.SeasonalANN.ratios.html  anntools.html  annutils.html  arma.html  arma_v1.html  arma_v1_arma.html  arma_v1_delay.html  arma_v1_ma.html  arma_v1_negative_discharge.html  arma_v1_nonlinearity.html  arma_v1_plausibility.html  armatools.html  autodoctools.html  auxfiletools.html  auxiliaries.html  calibtools.html  commandtools.html  configuration.html  configutils.html  continuous_integration.html  conv.html  conv_v001.html  conv_v002.html  conv_v003.html  core.html  cythons.html  dam.html  dam_v001.html  (+240 more)
5.0/: .buildinfo  HydPy-A.html  HydPy-C.html  HydPy-D.html  HydPy-Dummy.html  HydPy-Evap.html  HydPy-Exch.html  HydPy-H.html  HydPy-L.html  HydPy-Meteo.html  HydPy-T.html  (+326 more)
(+3902 files in other folders)
