[build-system]
requires = [
    "black",
    "click",
    "Cython",
    "matplotlib",
    "netcdf4",
    "networkx",
    "numpy",
    "pandas",
    "plotly",
    "scipy",
    "setuptools",
    "typing_extensions",
    "wheel",
    "wrapt",
    "xarray",
    "xmlschema",
]

[tool.black]
exclude = "hydpy/data/|hydpy/tests/iotesting"
