[build-system]
requires = [
    "black",
    "click",
    "Cython",
    "matplotlib",
    "netcdf4",
    "networkx",
    "numpy",
    "pandas",
    "plotly",
    "scipy",
    "setuptools",
    "strenum; python_version<'3.11'",
    "typing_extensions",
    "wheel",
    "wrapt",
    "xarray",
    "xmlschema",
]

[tool.black]
skip-magic-trailing-comma = true
exclude = "hydpy/data/|hydpy/tests/iotesting"
