[build-system]
requires = [
    "black",
    "click",
    "Cython",
    "matplotlib",
    "netcdf4",
    "networkx",
    "numpy",
    "pandas",
    "plotly",
    "scipy",
    "setuptools",
    "typing_extensions",
    "wheel",
    "wrapt",
    "xmlschema",
]

[tool.black]
skip-magic-trailing-comma = true
exclude = "hydpy/data/|hydpy/tests/iotesting"
